switch to java 11